test/errors/multiple_definitions_of_type.dmd
type Point
    x: Float64
    y: Float64

type Point
    x: Float64
    y: Float64
    z: Float64

--- Output
This type is already defined.

4| 
5| type Point
   ^
---